syntax = "proto3";

package gateway;

import "google/api/annotations.proto";

option go_package = "github.com/nguyenhoang711/grpc-gatewat-demo/proto/gen/go/gateway";

service UserService {
  rpc AddUser(AddUserRequest) returns (AddUserResponse) {
    option (google.api.http) = {
      post: "/users"
      body: "*"
    };
  }
}

message AddUserRequest {
  string name = 1;
}

message AddUserResponse {
  string id = 1;
}